aparentemente eu não sei mais inglês

--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Card Image</title>
+    <title>Forbidden West</title>
 </head>
 <body>
     <div class="container">
         <div class="panel active" style="background-image: url(wallpaper/Horizon-1.jpg);">
-            <h3>Explore the Forbbiden West</h3>
+            <h3>Explore the Forbidden West</h3>
         </div>
         <div class="panel active" style="background-image: url(wallpaper/Horizon-2.png);">
-            <h3>Explore the Forbbiden West</h3>
+            <h3>Explore the Forbidden West</h3>
         </div>
         <div class="panel active" style="background-image: url(wallpaper/Horizon-3.jpg);">
-            <h3>Explore the Forbbiden West</h3>
+            <h3>Explore the Forbidden West</h3>
         </div>
         <div class="panel active" style="background-image: url(wallpaper/Horizon-4.jpg);">
-            <h3>Explore the Forbbiden West</h3>
+            <h3>Explore the Forbidden West</h3>
         </div>
         
     </div>
