--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
         <div class="panel active" style="background-image: url(wallpaper/Horizon-4.jpg);">
             <h3>Explore the Forbidden West</h3>
         </div>
-        
+        <div class="panel active" style="background-image: url(wallpaper/Horizon-5.jpg);">
+            <h3>Explore the Forbidden West</h3>
+        </div>
+        <div class="panel active" style="background-image: url(wallpaper/Horizon-6.png);">
+            <h3>Explore the Forbidden West</h3>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
