--- a/index.html
+++ b/index.html
@@ -9,22 +9,19 @@
 </head>
 <body>
     <div class="container">
-        <div class="panel active" style="background-image: url(wallpaper/Horizon-1.jpg);">
+        <div class="panel active" style="background-image: url(wallpaper/Horizon-1.jpg);" alt="Aloy-Profile">
             <h3>Explore the Forbidden West</h3>
         </div>
-        <div class="panel active" style="background-image: url(wallpaper/Horizon-2.png);">
+        <div class="panel active" style="background-image: url(wallpaper/Horizon-2.png);" alt="Deserto">
             <h3>Explore the Forbidden West</h3>
         </div>
-        <div class="panel active" style="background-image: url(wallpaper/Horizon-3.jpg);">
+        <div class="panel active" style="background-image: url(wallpaper/Horizon-4.jpg);" alt="Montanha-de-Neve">
             <h3>Explore the Forbidden West</h3>
         </div>
-        <div class="panel active" style="background-image: url(wallpaper/Horizon-4.jpg);">
+        <div class="panel active" style="background-image: url(wallpaper/Horizon-5.jpg);" alt="Floresta-Tropical">
             <h3>Explore the Forbidden West</h3>
         </div>
-        <div class="panel active" style="background-image: url(wallpaper/Horizon-5.jpg);">
-            <h3>Explore the Forbidden West</h3>
-        </div>
-        <div class="panel active" style="background-image: url(wallpaper/Horizon-6.png);">
+        <div class="panel active" style="background-image: url(wallpaper/Horizon-6.png);" alt="Litoral">
             <h3>Explore the Forbidden West</h3>
         </div>
     </div>
