--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="panel active" style="background-image: url(wallpaper/Horizon-4.jpg);" alt="Montanha-de-Neve">
             <h3>Explore the Forbidden West</h3>
         </div>
-        <div class="panel active" style="background-image: url(wallpaper/Horizon-5.jpg);" alt="Floresta-Tropical">
+        <div class="panel active" style="background-image: url(wallpaper/Horizon-5.png);" alt="Floresta-Tropical">
             <h3>Explore the Forbidden West</h3>
         </div>
         <div class="panel active" style="background-image: url(wallpaper/Horizon-6.png);" alt="Litoral">
