--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 <body>
     <div class="container">
         <div class="panel active" style="background-image: url(wallpaper/Horizon-1.jpg);" alt="Aloy-Profile">
-            <h3>Explore the Forbidden West</h3>
+            <h3>Explore Quen's Land</h3>
         </div>
         <div class="panel active" style="background-image: url(wallpaper/Horizon-2.png);" alt="Deserto">
-            <h3>Explore the Forbidden West</h3>
+            <h3>Explore Tenaketh Desert</h3>
         </div>
         <div class="panel active" style="background-image: url(wallpaper/Horizon-4.jpg);" alt="Montanha-de-Neve">
-            <h3>Explore the Forbidden West</h3>
+            <h3>Explore Zenith's Base</h3>
         </div>
         <div class="panel active" style="background-image: url(wallpaper/Horizon-5.png);" alt="Floresta-Tropical">
-            <h3>Explore the Forbidden West</h3>
+            <h3>Explore Tenaketh Forest</h3>
         </div>
         <div class="panel active" style="background-image: url(wallpaper/Horizon-6.png);" alt="Litoral">
-            <h3>Explore the Forbidden West</h3>
+            <h3>Explore Your Last Battle</h3>
         </div>
     </div>
     <script src="script.js"></script>
